// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden: monster sprites: player 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "keysRight": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "left": [
    " ▐▛█▛██▌ ",
    "▝▜█████▛▘",
    "  ▀   ▀  ",
  ],
  "right": [
    " ▐██▜█▜▌ ",
    "▝▜█████▛▘",
    "  ▀   ▀  ",
  ],
  "w": 9,
}
`;

exports[`golden: monster sprites: chaser 1`] = `
{
  "baseline": 0,
  "h": 5,
  "keysLeft": [
    "mmmmmmm",
    "mmgmmgm",
    "mmmmmmm",
    "mmmmmmm",
    "mmmmmmm",
  ],
  "keysRight": [
    "mmmmmmm",
    "mgmmgmm",
    "mmmmmmm",
    "mmmmmmm",
    "mmmmmmm",
  ],
  "left": [
    " ▚ ▟▙ ▞",
    " ▟████▙",
    " ▐▜▜▜▜▚",
    " ▗▙▙▙▙▌",
    " ▞    ▚",
  ],
  "right": [
    "▚ ▟▙ ▞ ",
    "▟████▙ ",
    "▞▛▛▛▛▌ ",
    "▐▟▟▟▟▖ ",
    "▞    ▚ ",
  ],
  "w": 7,
}
`;

exports[`golden: monster sprites: shooter 1`] = `
{
  "baseline": 0,
  "h": 5,
  "keysLeft": [
    "ooooooo",
    "oogggoo",
    "oggkggo",
    "oogggoo",
    "ooooooo",
  ],
  "keysRight": [
    "ooooooo",
    "oogggoo",
    "oggkggo",
    "oogggoo",
    "ooooooo",
  ],
  "left": [
    " ▗▄▄▄▖ ",
    "▟█████▙",
    "██▟█▙██",
    "▜█████▛",
    " ▝▀▀▀▘ ",
  ],
  "right": [
    " ▗▄▄▄▖ ",
    "▟█████▙",
    "██▟█▙██",
    "▜█████▛",
    " ▝▀▀▀▘ ",
  ],
  "w": 7,
}
`;

exports[`golden: monster sprites: brute 1`] = `
{
  "baseline": 0,
  "h": 6,
  "keysLeft": [
    "sssssss",
    "ssykyss",
    "sssssss",
    "sssssss",
    "sssssss",
    "sssssss",
  ],
  "keysRight": [
    "sssssss",
    "ssykyss",
    "sssssss",
    "sssssss",
    "sssssss",
    "sssssss",
  ],
  "left": [
    " ▟███▙ ",
    "▐█▀█▀█▌",
    "▟█████▙",
    "▟██████",
    "▐█▌ ▐█▌",
    " ▀▀ ▀▀ ",
  ],
  "right": [
    " ▟███▙ ",
    "▐█▀█▀█▌",
    "▟█████▙",
    "██████▙",
    "▐█▌ ▐█▌",
    " ▀▀ ▀▀ ",
  ],
  "w": 7,
}
`;

exports[`golden: npc sprites: vendor 1`] = `
{
  "baseline": 0,
  "h": 5,
  "keysLeft": [
    "oooooo",
    "oooooo",
    "oooooo",
    "cccccc",
    "oooooo",
  ],
  "keysRight": [
    "oooooo",
    "oooooo",
    "oooooo",
    "cccccc",
    "oooooo",
  ],
  "left": [
    "  ▟▙  ",
    " ▟██▙ ",
    "▟▛██▜▙",
    "██████",
    "▝████▘",
  ],
  "right": [
    "  ▟▙  ",
    " ▟██▙ ",
    "▟▛██▜▙",
    "██████",
    "▝████▘",
  ],
  "w": 6,
}
`;

exports[`golden: hat sprites: hat: cap 1`] = `
{
  "baseline": 0,
  "h": 1,
  "keysLeft": [
    "ooooooo",
  ],
  "keysRight": [
    "ooooooo",
  ],
  "left": [
    "▄█████▄",
  ],
  "right": [
    "▄█████▄",
  ],
  "w": 7,
}
`;

exports[`golden: hat sprites: hat: crown 1`] = `
{
  "baseline": 0,
  "h": 1,
  "keysLeft": [
    "yyyyy",
  ],
  "keysRight": [
    "yyyyy",
  ],
  "left": [
    "█▄█▄█",
  ],
  "right": [
    "█▄█▄█",
  ],
  "w": 5,
}
`;

exports[`golden: hat sprites: hat: party-hat 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ccycc",
    "ccccc",
    "cmmmc",
  ],
  "keysRight": [
    "ccycc",
    "ccccc",
    "cmmmc",
  ],
  "left": [
    "  ▲  ",
    " ▟█▙ ",
    "▄███▄",
  ],
  "right": [
    "  ▲  ",
    " ▟█▙ ",
    "▄███▄",
  ],
  "w": 5,
}
`;

exports[`golden: hat sprites: hat: top-hat 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "kkkkkkk",
    "kmmmmmk",
    "kkkkkkk",
  ],
  "keysRight": [
    "kkkkkkk",
    "kmmmmmk",
    "kkkkkkk",
  ],
  "left": [
    " █████ ",
    " █████ ",
    "▄█████▄",
  ],
  "right": [
    " █████ ",
    " █████ ",
    "▄█████▄",
  ],
  "w": 7,
}
`;

exports[`golden: hat sprites: hat: wizard 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ccccccc",
    "ccccccc",
    "coooooc",
  ],
  "keysRight": [
    "ccccccc",
    "ccccccc",
    "coooooc",
  ],
  "left": [
    "  ▟█▙  ",
    " ▟███▙ ",
    "███████",
  ],
  "right": [
    "  ▟█▙  ",
    " ▟███▙ ",
    "███████",
  ],
  "w": 7,
}
`;

exports[`golden: buddy form frames: buddy: idle 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "keysRight": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "left": [
    " ▐▛█▛██▌ ",
    "▝▜█████▛▘",
    "  ▀   ▀  ",
  ],
  "right": [
    " ▐██▜█▜▌ ",
    "▝▜█████▛▘",
    "  ▀   ▀  ",
  ],
  "w": 9,
}
`;

exports[`golden: buddy form frames: buddy: walk[0] 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "keysRight": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "left": [
    " ▐▛█▛██▌ ",
    "▝▜█████▛▘",
    " ▀     ▀ ",
  ],
  "right": [
    " ▐██▜█▜▌ ",
    "▝▜█████▛▘",
    " ▀     ▀ ",
  ],
  "w": 9,
}
`;

exports[`golden: buddy form frames: buddy: walk[1] 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "keysRight": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "left": [
    " ▐▛█▛██▌ ",
    "▝▜█████▛▘",
    "   ▀ ▀   ",
  ],
  "right": [
    " ▐██▜█▜▌ ",
    "▝▜█████▛▘",
    "   ▀ ▀   ",
  ],
  "w": 9,
}
`;

exports[`golden: buddy form frames: buddy: jump 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "keysRight": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "left": [
    "▗▟▛█▛██▙▖",
    " ▐█████▌ ",
    " ▀     ▀ ",
  ],
  "right": [
    "▗▟██▜█▜▙▖",
    " ▐█████▌ ",
    " ▀     ▀ ",
  ],
  "w": 9,
}
`;

exports[`golden: buddy form frames: buddy: emote:wave[0] 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "keysRight": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "left": [
    " ▐▛█▛██▙▖",
    "▝▜█████▌ ",
    "  ▀   ▀  ",
  ],
  "right": [
    "▗▟██▜█▜▌ ",
    " ▐█████▛▘",
    "  ▀   ▀  ",
  ],
  "w": 9,
}
`;

exports[`golden: buddy form frames: buddy: emote:wave[1] 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "keysRight": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "left": [
    " ▐▛█▛██▌ ",
    "▝▜█████▛▘",
    "  ▀   ▀  ",
  ],
  "right": [
    " ▐██▜█▜▌ ",
    "▝▜█████▛▘",
    "  ▀   ▀  ",
  ],
  "w": 9,
}
`;

exports[`golden: buddy form frames: buddy: emote:dance[0] 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "keysRight": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "left": [
    "▗▟▛█▛██▙▖",
    " ▜█████▛ ",
    "    ▀▀   ",
  ],
  "right": [
    "▗▟██▜█▜▙▖",
    " ▜█████▛ ",
    "   ▀▀    ",
  ],
  "w": 9,
}
`;

exports[`golden: buddy form frames: buddy: emote:dance[1] 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "keysRight": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "left": [
    " ▐▛█▛██▌ ",
    "▟▜█████▛▙",
    " ▀     ▀ ",
  ],
  "right": [
    " ▐██▜█▜▌ ",
    "▟▜█████▛▙",
    " ▀     ▀ ",
  ],
  "w": 9,
}
`;

exports[`golden: buddy form frames: buddy: emote:sit 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "keysRight": [
    "ppppppppp",
    "ppppppppp",
    "ppppppppp",
  ],
  "left": [
    "         ",
    " ▐▛█▛██▌ ",
    "▄▟█████▛▘",
  ],
  "right": [
    "         ",
    " ▐██▜█▜▌ ",
    "▝▜█████▙▄",
  ],
  "w": 9,
}
`;

exports[`golden: sword weapon frames: sword: rest 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "aa",
    "aa",
    "kk",
  ],
  "keysRight": [
    "aa",
    "aa",
    "kk",
  ],
  "left": [
    "▐▌",
    "▟▙",
    "▝▘",
  ],
  "right": [
    "▐▌",
    "▟▙",
    "▝▘",
  ],
  "w": 2,
}
`;

exports[`golden: sword weapon frames: sword: swing[0] 1`] = `
{
  "baseline": 0,
  "h": 3,
  "keysLeft": [
    "aaaa",
    "aaaa",
    "kkaa",
  ],
  "keysRight": [
    "aaaa",
    "aaaa",
    "aakk",
  ],
  "left": [
    "  ▟ ",
    " ▟▌ ",
    "▝▘  ",
  ],
  "right": [
    " ▙  ",
    " ▐▙ ",
    "  ▝▘",
  ],
  "w": 4,
}
`;

exports[`golden: sword weapon frames: sword: swing[1] 1`] = `
{
  "baseline": 0,
  "h": 4,
  "keysLeft": [
    "aaaaa",
    "aaaak",
    "aaaak",
    "aaaaa",
  ],
  "keysRight": [
    "aaaaa",
    "kaaaa",
    "kaaaa",
    "aaaaa",
  ],
  "left": [
    "     ",
    "▂▂▂▟▂",
    "▔▔▔▜▔",
    "     ",
  ],
  "right": [
    "     ",
    "▂▙▂▂▂",
    "▔▛▔▔▔",
    "     ",
  ],
  "w": 5,
}
`;

exports[`golden: sword weapon frames: sword: swing[2] 1`] = `
{
  "baseline": 0,
  "h": 1,
  "keysLeft": [
    "a",
  ],
  "keysRight": [
    "a",
  ],
  "left": [
    " ",
  ],
  "right": [
    " ",
  ],
  "w": 1,
}
`;

exports[`golden scene: full avatar facing right: avatar facing right 1`] = `
"_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ ▟|cC|TR* █|cC|TR* ▙|cC|TR* _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ ▟|cC|TR* █|cC|TR* █|cC|TR* █|cC|TR* ▙|cC|TR* _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ █|cC|TR* █|cO|TR* █|cO|TR* █|cO|TR* █|cO|TR* █|cO|TR* █|cC|TR* ▐|cS|TR* ▌|cS|TR* _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ ▐|hue2|TR* █|hue2|TR* █|hue2|TR* ▜|hue2|TR* █|hue2|TR* ▜|hue2|TR* ▌|hue2|TR* ▟|cS|TR* ▙|cS|TR* _ _ _ _ _ _ _ _
_ _ _ _ _ _ ▝|hue2|TR* ▜|hue2|TR* █|hue2|TR* █|hue2|TR* █|hue2|TR* █|hue2|TR* █|hue2|TR* ▛|hue2|TR* ▝|cK|TR* ▘|cK|TR* _ _ _ _ _ _ _ _
▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▀|hue2|TFG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▀|hue2|TFG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG _ _ _ _
█|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG _ _ _ _
█|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG _ _ _ _
█|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG _ _ _ _"
`;

exports[`golden scene: full avatar facing left: avatar facing left 1`] = `
"_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ ▟|cC|TR* █|cC|TR* ▙|cC|TR* _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ ▟|cC|TR* █|cC|TR* █|cC|TR* █|cC|TR* ▙|cC|TR* _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ ▐|cS|TR* ▌|cS|TR* █|cC|TR* █|cO|TR* █|cO|TR* █|cO|TR* █|cO|TR* █|cO|TR* █|cC|TR* _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ ▟|cS|TR* ▙|cS|TR* ▐|hue2|TR* ▛|hue2|TR* █|hue2|TR* ▛|hue2|TR* █|hue2|TR* █|hue2|TR* ▌|hue2|TR* _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ ▝|cK|TR* ▘|cK|TR* ▜|hue2|TR* █|hue2|TR* █|hue2|TR* █|hue2|TR* █|hue2|TR* █|hue2|TR* ▛|hue2|TR* ▘|hue2|TR* _ _ _ _ _ _ _ _ _
▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▀|hue2|TFG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▀|hue2|TFG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG ▄|TFG|BG _ _ _ _
█|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG _ _ _ _
█|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG _ _ _ _
█|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG █|TFG|TBG _ _ _ _"
`;

exports[`golden scene: hurt chaser: hurt chaser 1`] = `
"_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ ▚|HURT|TR* _ ▟|HURT|TR* ▙|HURT|TR* _ ▞|HURT|TR* _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ ▟|HURT|TR* █|HURT|TR* █|HURT|TR* █|HURT|TR* █|HURT|TR* ▙|HURT|TR* _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ ▞|HURT|TR* ▛|HURT|TR* ▛|HURT|TR* ▛|HURT|TR* ▛|HURT|TR* ▌|HURT|TR* _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ ▐|HURT|TR* ▟|HURT|TR* ▟|HURT|TR* ▟|HURT|TR* ▟|HURT|TR* ▖|HURT|TR* _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ ▞|HURT|TR* _ _ _ _ ▚|HURT|TR* _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _"
`;

exports[`golden scene: ghost shooter: ghost shooter 1`] = `
"_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _  |TINT|TINT ▗|F(cO)|TINT ▄|F(cO)|TINT ▄|F(cO)|TINT ▄|F(cO)|TINT ▖|F(cO)|TINT  |TINT|TINT _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ ▟|F(cO)|TINT █|F(cO)|TINT █|F(cG)|TINT █|F(cG)|TINT █|F(cG)|TINT █|F(cO)|TINT ▙|F(cO)|TINT _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ █|F(cO)|TINT █|F(cG)|TINT ▟|F(cG)|TINT █|F(cK)|TINT ▙|F(cG)|TINT █|F(cG)|TINT █|F(cO)|TINT _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ ▜|F(cO)|TINT █|F(cO)|TINT █|F(cG)|TINT █|F(cG)|TINT █|F(cG)|TINT █|F(cO)|TINT ▛|F(cO)|TINT _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _  |TINT|TINT ▝|F(cO)|TINT ▀|F(cO)|TINT ▀|F(cO)|TINT ▀|F(cO)|TINT ▘|F(cO)|TINT  |TINT|TINT _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _"
`;

exports[`golden scene: walk frames: walk frame: walk-0 1`] = `
"_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ ▐|cP|TR* █|cP|TR* █|cP|TR* ▜|cP|TR* █|cP|TR* ▜|cP|TR* ▌|cP|TR* _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ ▝|cP|TR* ▜|cP|TR* █|cP|TR* █|cP|TR* █|cP|TR* █|cP|TR* █|cP|TR* ▛|cP|TR* ▘|cP|TR* _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ ▀|cP|TR* _ _ _ _ _ ▀|cP|TR* _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _"
`;

exports[`golden scene: walk frames: walk frame: walk-1 1`] = `
"_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ ▐|cP|TR* █|cP|TR* █|cP|TR* ▜|cP|TR* █|cP|TR* ▜|cP|TR* ▌|cP|TR* _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ ▝|cP|TR* ▜|cP|TR* █|cP|TR* █|cP|TR* █|cP|TR* █|cP|TR* █|cP|TR* ▛|cP|TR* ▘|cP|TR* _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ ▀|cP|TR* _ ▀|cP|TR* _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _"
`;

exports[`golden scene: mid-swing: mid-swing 1`] = `
"_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ ╲|cS|TR* _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ ▐|cP|TR* █|cP|TR* █|cP|TR* ▜|cP|TR* █|cP|TR* ▜|cP|TR* ▌|cP|TR* ▂|cK|TR* ▙|cS|TR* ╲|cS|TR* ▂|cS|TFG ▂|cS|TFG _
_ _ _ _ _ _ _ _ _ _ ▝|cP|TR* ▜|cP|TR* █|cP|TR* █|cP|TR* █|cP|TR* █|cP|TR* █|cP|TR* ▛|cP|TR* ▔|cK|TR* ▛|cS|TR* ─|cS|TR* ▔|cS|TFG ▔|cS|TFG _
_ _ _ _ _ _ _ _ _ _ _ _ ▀|cP|TR* _ _ _ ▀|cP|TR* _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _"
`;
